--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,11 @@ pnpm-debug.log*
 /backend/.bundle
 
 # Ignore the default SQLite database.
-/backend/db/*.sqlite3
-/backend/db/*.sqlite3-*
+#/backend/db/*.sqlite3
+#/backend/db/*.sqlite3-*
 
 # Ignore all logfiles and tempfiles.
-/backend/log/*
+#/backend/log/*
 /backend/tmp/*
 !/backend/log/.keep
 !/backend/tmp/.keep
