--- a/frontend/dist_electron/package.json
+++ b/frontend/dist_electron/package.json
@@ -13,6 +13,8 @@
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^1.3.6",
+    "electron": "^13.0.0",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3"
@@ -26,7 +28,6 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "electron": "^13.0.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
