--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,9 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/devtools": "^6.5.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "electron-devtools-installer": "^3.1.0",
+    "electron-devtools-installer": "^3.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
