--- a/frontend/dist_electron/package.json
+++ b/frontend/dist_electron/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "axios": "^1.3.6",
     "electron": "^13.0.0",
+    "electron-builder": "^23.6.0",
+    "latest": "^0.2.0",
+    "n": "^9.1.0",
+    "stable": "^0.1.8",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3"
@@ -29,7 +33,7 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/devtools": "^6.5.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "electron-devtools-installer": "^3.1.1",
+    "electron-devtools-installer": "^3.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
