--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "axios": "^1.3.6",
     "electron": "^13.0.0",
+    "electron-builder": "^23.6.0",
+    "latest": "^0.2.0",
+    "n": "^9.1.0",
+    "stable": "^0.1.8",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3"
