--- a/frontend/dist_electron/package.json
+++ b/frontend/dist_electron/package.json
@@ -18,7 +18,9 @@
     "electron-builder": "^23.6.0",
     "latest": "^0.2.0",
     "n": "^9.1.0",
+    "naive-ui": "^2.34.3",
     "stable": "^0.1.8",
+    "vfonts": "^0.0.3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3"
