--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "vfonts": "^0.0.3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
