--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -43,7 +43,11 @@ gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
 
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
+gem 'devise_token_auth', '~> 1.2.1'
+gem 'devise', '~> 4.8'
+gem 'rolify', '~> 6.0'
 gem 'carrierwave', '~> 2.2'
+gem 'cancancan', '~> 3.4'
 # Use Sass to process CSS
 # gem "sassc-rails"
 
