--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,16 +15,9 @@
   "dependencies": {
     "axios": "^1.3.6",
     "electron": "^13.0.0",
-    "electron-builder": "^23.6.0",
-    "latest": "^0.2.0",
-    "n": "^9.1.0",
-    "naive-ui": "^2.34.3",
-    "stable": "^0.1.8",
-    "vfonts": "^0.0.3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
@@ -34,9 +27,8 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "@vue/devtools": "^6.5.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "electron-devtools-installer": "^3.2.0",
+    "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
