chore[package.json]: Install Vant UI Components

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "n": "^9.1.0",
     "naive-ui": "^2.34.3",
     "stable": "^0.1.8",
+    "vant": "^4.4.0",
     "vfonts": "^0.0.3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
