--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -49,11 +49,13 @@ gem 'carrierwave', '~> 2.2'
 
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
-
+gem 'rspec-rails', '~> 6.0.1'
+gem 'rspec_junit_formatter', '~> 0.6.0'
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
 end
+
 
 group :development do
   # Use console on exceptions pages [https://github.com/rails/web-console]
