--- a/frontend/dist_electron/package.json
+++ b/frontend/dist_electron/package.json
@@ -13,6 +13,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@vueuse/core": "^10.1.2",
     "axios": "^1.3.6",
     "electron": "^13.0.0",
     "electron-builder": "^23.6.0",
@@ -20,6 +21,7 @@
     "n": "^9.1.0",
     "naive-ui": "^2.34.3",
     "stable": "^0.1.8",
+    "vant": "^4.4.0",
     "vfonts": "^0.0.3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
