--- a/frontend/dist_electron/package.json
+++ b/frontend/dist_electron/package.json
@@ -13,6 +13,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@vueuse/core": "^10.1.2",
     "axios": "^1.3.6",
     "electron": "^13.0.0",
     "electron-builder": "^23.6.0",
