--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -40,7 +40,7 @@ gem "jbuilder"
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
-
+gem 'simplecov'
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
 gem 'carrierwave', '~> 2.2'
