--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,7 @@ COPY Gemfile.lock /app/Gemfile.lock
 ENV RAILS_ENV production
 RUN bundle install
 COPY . /app
-CMD rake db:migrate assets:precompile && rake db:seed && puma -C config/puma.rb && ["rails", "server", "-b", "0.0.0.0"]
+RUN rake db:migrate assets:precompile && \
+    rake db:seed 
+
+ENTRYPOINT ["rails", "server", "-b", "0.0.0.0"]
