feat:app icon set

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "mrt_pass",
+  "version": "1.0.0",
   "private": true,
+  "description": "project",
+  "author": "Group_5",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -52,4 +54,6 @@
   "gitHooks": {
     "pre-commit": "lint-staged"
   }
+  
+  
 }
